# uatranshelp

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  b64img.txt  config.toml  rustfmt.toml
frontend/: contributors  cploc.js  donate.txt  index.html  info.txt  package-lock.json  package.json  policy.txt  style.css
frontend/js/: anim.js  api.js  app.js  create.js  locale.js  map.js  offer.js
frontend/locales/: english.json  polish.json  romanian.json  ukrainian.json
src/: api.rs  dbconn.rs  main.rs  offer.rs  util.rs
